# robot-control-policies

./: README.md  main.py  pyproject.toml
configs/: README.md  default.yaml  mlp.yaml
configs/dataset/: README.md  board_clean.yaml
configs/experiment/: README.md  mlp_board_clean.yaml  overfit_mlp_board_clean.yaml  overfit_pi0_tiny_board_clean.yaml  pi0_tiny_board_clean.yaml
configs/model/: README.md  mlp.yaml  pi0_tiny.yaml  vla_jepa_slots.yaml
configs/train/: README.md  debug.yaml  default.yaml  local.yaml  overfit.yaml
docs/: vla_weight_loading.md
models/: mlp_policy.py
robot_control_policies/: config.py  dataset.py  weights.py
robot_control_policies/models/mlp/: __init__.py  mlp_policy.py
robot_control_policies/models/pi0/: __init__.py  pi0.py  pi0_tiny.py
robot_control_policies/models/vla_jepa/: README.md  check_layout.py  vla_jepa.py
src/: __init__.py  config.py  dataset.py  env_wrapper.py  models.py
trainers/: train_mlp.py  train_pi0_tiny.py
