[project]
name = "robot-control-policies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lerobot>=0.5.1",
    "pyyaml>=6.0.2",
    "torch>=2.10.0",
]

[tool.setuptools.packages.find]
include = ["robot_control_policies*"]
